MicroTodoUI/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoui
  template:
    metadata:
      labels:
        app: todoui
    spec:
      containers:
      - name: todoui
        image: devtodoacrwestus.azurecr.io/todo-ui:v2 
        ports:
        - containerPort: 80
