MicroTodoUI/manifest/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoui
spec:
  selector:
    app: todoui
  ports:
  - port: 80  #port of service
    targetPort: 80  #port of pod container
