MicroTodoUI/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoui
  labels:
    name: todoui
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: todoapp.gauravrajsingh369.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoui
            port: 
              number: 80
